Test/negativeWorkGroupSize.comp
#version 460

void fn(){
    uvec3 wgs = gl_WorkGroupSize; // error: fixed workgroup size has not been declared
    uint foo = gl_WorkGroupSize.y; // error: can't access component of gl_WorkGroupSize either
}

layout(local_size_x = 64) in; // declare workgroup size

void main(){
    fn();
    uvec3 wgs = gl_WorkGroupSize; // valid
}
